--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -23,7 +23,7 @@
 		<h3>Международные</h3>
 		
 			<ul>
-				<li> <img src="img/Flag_of_the_United_Nations.svg.webp" width="22" height="14"> ООН — <a target="_blank" title="Всемирный день психического здоровья, памятная дата 10 октября." href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D0%BC%D0%B8%D1%80%D0%BD%D1%8B%D0%B9_%D0%B4%D0%B5%D0%BD%D1%8C_%D0%BF%D1%81%D0%B8%D1%85%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%D0%B7%D0%B4%D0%BE%D1%80%D0%BE%D0%B2%D1%8C%D1%8F" alt="#"> Всемирный день психического здоровья.</a></li>
+				<li> <img src="img/Flag_of_the_United_Nations.svg.webp" width="22" height="14" alt="#"> ООН — <a target="_blank" title="Всемирный день психического здоровья, памятная дата 10 октября." href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D0%BC%D0%B8%D1%80%D0%BD%D1%8B%D0%B9_%D0%B4%D0%B5%D0%BD%D1%8C_%D0%BF%D1%81%D0%B8%D1%85%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%D0%B7%D0%B4%D0%BE%D1%80%D0%BE%D0%B2%D1%8C%D1%8F" alt="#"> Всемирный день психического здоровья.</a></li>
 				<li> <img src="img/Flag_of_Europe.svg.webp" width="22" height="15" alt="#"> Европейский союз — Европейский день борьбы против смертной казни</li>
 			</ul>
 
@@ -32,7 +32,7 @@
 				<li><img src="img/Flag_of_the_Republic_of_China.svg.webp" width="22" height="14" alt="#"> Китайская Республика — Праздник Двух Десяток.</li>
 				<li><img src="img/Flag_of_Cuba.svg.webp"width="22" height="14" alt="2"> Куба— День независимости.</li>
 				<li><img src="img/Flag_of_Poland.svg.webp" alt="#" width="22" height="14"> Польша — <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BD%D1%8C_%D0%BF%D0%BE%D1%81%D0%B0%D0%B4%D0%BA%D0%B8_%D0%B4%D0%B5%D1%80%D0%B5%D0%B2%D1%8C%D0%B5%D0%B2" title="Польский праздник">  День посадки деревьев.</a> </li>
-				<li><img src="img/Flag_of_Ukraine.svg.webp" alt="*" width="22" height="14"> Украина —  <a target="_blank" title="национальный профессиональный праздник" href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BD%D1%8C_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2_%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8_%D0%B8_%D0%BC%D0%B5%D1%82%D1%80%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8_%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B" >День работников стандартизации и метрологии Украины.</a></li>
+				<li><img src="img/Flag_of_Ukraine.svg.webp" alt="#" width="22" height="14"> Украина —  <a target="_blank" title="национальный профессиональный праздник" href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BD%D1%8C_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2_%D1%81%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8_%D0%B8_%D0%BC%D0%B5%D1%82%D1%80%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8_%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B" >День работников стандартизации и метрологии Украины.</a></li>
 			</ul>
 
 		<h3><img src="img/P_religion_world.svg.webp" width="22" height="20" alt="#">Религиозные</h3>	
